--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: your-twitter-handle
+twitter_username: your-twitter-handlexy
 github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
